<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.signup.SignUpActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_history"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text_first_name"
        style="@style/FormField"
        android:hint="@string/first_name"
        android:text="John"/>

    <EditText
        android:id="@+id/text_last_name"
        style="@style/FormField"
        android:hint="@string/last_name"
        android:text="Smith"/>

    <RadioGroup
        style="@style/FormField"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:checked="true"
            android:id="@+id/radioButton"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:id="@+id/radioButton2" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_medicare"
        style="@style/FormField"
        android:hint="@string/medicare_number"
        android:inputType="number"/>

    <EditText
        android:id="@+id/text_phone"
        style="@style/FormField"
        android:hint="@string/phone_number"
        android:inputType="number"/>

</LinearLayout>
