<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.signup.SignUpActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_conditions"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text_medication"
        style="@style/FormField"
        android:hint="@string/text_medication" />

    <EditText
        android:id="@+id/text_chronic_conditions"
        style="@style/FormField"
        android:hint="@string/chronic_conditions" />

    <EditText
        android:id="@+id/text_number_years"
        style="@style/FormField"
        android:hint="@string/number_years"
        android:inputType="number"/>

    <EditText
        android:id="@+id/text_specialist"
        style="@style/FormField"
        android:hint="@string/specialist"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/text_allergies"
        style="@style/FormField"
        android:hint="@string/allergies"
        android:inputType="textCapSentences"/>

</LinearLayout>
