<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.waiting.WaitingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/waiting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiting_time"
                android:gravity="center_horizontal"
                android:textSize="24sp" />

            <com.bradnicolle.erready.views.PieChart
                android:id="@+id/waiting_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/while_you_wait"
                android:gravity="center_horizontal"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protips"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/sling" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cancel_button"
        style="@style/BottomButton"
        android:background="@android:color/holo_red_light"
        android:text="@string/cancel"/>

</LinearLayout>
